--- a/todo-txt/todo.cfg
+++ b/todo-txt/todo.cfg
@@ -8,6 +8,7 @@ export TODO_DIR="/Users/roadhump/Dropbox/todo"
 export TODO_FILE="$TODO_DIR/todo.txt"
 export DONE_FILE="$TODO_DIR/done.txt"
 export REPORT_FILE="$TODO_DIR/report.txt"
+export TODO_ACTIONS_DIR="$TODO_DIR/.actions"
 
 # You can customize your actions directory location
 #export TODO_ACTIONS_DIR="$HOME/.todo.actions.d"
